# pythondd

./: .gitignore  LEARNING_PLAN.md  README.md
stages/stage-01-basics/: .gitignore  01-env-and-tools.md  02-syntax-basics.md  03-data-structures.md  04-functions.md  05-io-and-modules.md  README.md  pyproject.toml
stages/stage-01-basics/exercises/: __init__.py  ex01_variables_and_types.py  ex02_collections.py  ex03_functions.py  ex04_io_and_exceptions.py  ex05_idioms.py  test_ex01_variables_and_types.py  test_ex02_collections.py  test_ex03_functions.py  test_ex04_io_and_exceptions.py  test_ex05_idioms.py
stages/stage-01-basics/project/: README.md
stages/stage-01-basics/project/tests/: test_service.py  test_storage.py
stages/stage-01-basics/project/todo_cli/: __init__.py  __main__.py  models.py  service.py  storage.py
stages/stage-02-pythonic-core/: 01-comprehensions.md  02-iterators-and-generators.md  03-decorators.md  04-context-managers.md  05-magic-methods.md  06-duck-typing.md  README.md  pyproject.toml
stages/stage-02-pythonic-core/exercises/: __init__.py  ex01_comprehensions.py  ex02_iterators_generators.py  ex03_decorators.py  ex04_context_managers.py  ex05_magic_methods.py  test_ex01_comprehensions.py  test_ex02_iterators_generators.py  test_ex03_decorators.py  test_ex04_context_managers.py  test_ex05_magic_methods.py
stages/stage-02-pythonic-core/project/: README.md
stages/stage-02-pythonic-core/project/log_analyzer/: __init__.py  __main__.py  analyzer.py  models.py  parser.py
stages/stage-02-pythonic-core/project/log_analyzer/sample_data/: _gen.py
stages/stage-02-pythonic-core/project/tests/: test_analyzer.py  test_parser.py
stages/stage-03-oop-deep/: 01-class-basics-and-mro.md  02-descriptors.md  03-attribute-protocol.md  04-abc-vs-protocol.md  05-slots-and-memory.md  06-multiple-inheritance.md  README.md  pyproject.toml
stages/stage-03-oop-deep/exercises/: __init__.py  ex01_classes_and_mro.py  ex02_descriptors.py  ex03_attribute_protocol.py  ex04_abc_and_protocol.py  ex05_slots_and_mixin.py  test_ex01_classes_and_mro.py  test_ex02_descriptors.py  test_ex03_attribute_protocol.py  test_ex04_abc_and_protocol.py  test_ex05_slots_and_mixin.py
stages/stage-03-oop-deep/project/: README.md
stages/stage-03-oop-deep/project/rule_engine/: __init__.py  __main__.py  engine.py  loader.py  models.py  protocols.py  registry.py
stages/stage-03-oop-deep/project/rule_engine/builtin_rules/: __init__.py  range_check.py  required.py  type_check.py
stages/stage-03-oop-deep/project/tests/: __init__.py  test_builtin.py  test_engine.py  test_registry.py
stages/stage-04-typing-fp/: 01-typing-fundamentals.md  02-typevar-and-generics.md  03-protocol-advanced.md  04-dataclass.md  05-functools.md  06-itertools-and-match.md  README.md  pyproject.toml
stages/stage-04-typing-fp/exercises/: __init__.py  ex01_typing_basics.py  ex02_generics.py  ex03_protocols.py  ex04_dataclass.py  ex05_functools.py  test_ex01_typing_basics.py  test_ex02_generics.py  test_ex03_protocols.py  test_ex04_dataclass.py  test_ex05_functools.py
stages/stage-04-typing-fp/project/: README.md
stages/stage-04-typing-fp/project/data_pipeline/: __init__.py  __main__.py  errors.py  formatters.py  models.py  pipeline.py  protocols.py
stages/stage-04-typing-fp/project/data_pipeline/sample_data/: _gen.py
stages/stage-04-typing-fp/project/data_pipeline/stages/: __init__.py  aggregator.py  enricher.py  parser.py  validator.py
stages/stage-04-typing-fp/project/tests/: test_aggregator.py  test_enricher.py  test_parser.py  test_pipeline.py  test_validator.py
stages/stage-05-async-concurrency/: .gitignore  01-gil-and-concurrency.md  02-threading.md  03-multiprocessing.md  04-asyncio-basics.md  05-asyncio-advanced.md  06-async-ecosystem.md  README.md  pyproject.toml
stages/stage-05-async-concurrency/exercises/: __init__.py  ex01_gil_and_threading.py  ex03_asyncio_basics.py  ex04_asyncio_advanced.py  ex05_async_io.py  test_ex01_gil_and_threading.py  test_ex02_multiprocessing.py  test_ex03_asyncio_basics.py  test_ex04_asyncio_advanced.py  test_ex05_async_io.py
stages/stage-05-async-concurrency/project/: README.md
stages/stage-05-async-concurrency/project/async_crawler/: __init__.py  __main__.py  crawler.py  fetcher.py  models.py  protocols.py  rate_limiter.py  retry.py  storage.py
stages/stage-05-async-concurrency/project/async_crawler/sample_data/: _gen.py
stages/stage-05-async-concurrency/project/tests/: test_crawler.py  test_rate_limiter.py  test_retry.py  test_storage.py
stages/stage-06-engineering/: README.md
stages/stage-07-stdlib/: README.md
