[project]
name = "stage-02-pythonic-core"
version = "0.1.0"
description = "Python 阶段 2：Pythonic 核心（推导式、生成器、装饰器、上下文管理器、魔术方法、鸭子类型）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "wu" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project/log_analyzer"]

# ==================== pytest ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["exercises", "project/tests"]
pythonpath = ["project"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ==================== ruff ====================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "RUF001",  # 中文全角字符
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# 练习源文件里有未实现的 TODO，未用 import 是预期的
"exercises/ex*.py" = ["F401", "F811", "B008", "UP047"]
"exercises/test_ex*.py" = ["B015"]
"project/log_analyzer/parser.py" = ["F401"]
"project/log_analyzer/analyzer.py" = ["F401"]
"project/log_analyzer/sample_data/_gen.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== mypy ====================
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

# ==================== uv ====================
[tool.uv]
package = true
