[project]
name = "stage-04-typing-fp"
version = "0.1.0"
description = "Python 阶段 4：类型系统与函数式（typing、Generic、Protocol、dataclass、functools、itertools、模式匹配）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "wu" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project/data_pipeline"]

# ==================== pytest ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["exercises", "project/tests"]
pythonpath = ["project"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ==================== ruff ====================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# 练习源文件脚手架
"exercises/ex*.py" = ["F401", "B008", "UP047", "D102", "RUF012", "UP046"]
"project/data_pipeline/pipeline.py" = ["F401", "B008", "UP046"]
"project/data_pipeline/formatters.py" = ["F401"]
"project/data_pipeline/sample_data/_gen.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== mypy ====================
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

# Protocol 用法已知有 mypy "应使用协变/逆变" 警告（教学用不变即可）
[[tool.mypy.overrides]]
module = "data_pipeline.protocols"
disable_error_code = ["misc"]

# json 返回 Any 是已知；不在练习范围
[[tool.mypy.overrides]]
module = "data_pipeline.__main__"
disable_error_code = ["no-any-return"]

# ==================== uv ====================
[tool.uv]
package = true
