[project]
name = "stage-05-async-concurrency"
version = "0.1.0"
description = "Python 阶段 5：异步与并发（GIL、threading、multiprocessing、asyncio、httpx）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "wu" }]
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project/async_crawler"]

# ==================== pytest ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["exercises", "project/tests"]
pythonpath = ["project"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ==================== ruff ====================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# 练习源文件脚手架
"exercises/ex*.py" = ["F401", "B008", "UP047", "D102", "RUF012", "UP046"]
"project/async_crawler/rate_limiter.py" = ["F401", "B008", "UP046"]
"project/async_crawler/crawler.py" = ["F401", "B008"]
"project/async_crawler/fetcher.py" = ["F401", "B008"]
"project/async_crawler/retry.py" = ["F401", "B008"]
"project/async_crawler/storage.py" = ["F401", "B008"]
"project/async_crawler/sample_data/_gen.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== mypy ====================
[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

# ==================== uv ====================
[tool.uv]
package = true
